--- a/secciones/capitulo1.tex
+++ b/secciones/capitulo1.tex
@@ -8,26 +8,27 @@ La re-identificación de personas (\textit{Person Re-ID}) es una tarea fundament
 Para entrenar estos sistemas, existen dos estrategias principales. La primera es el aprendizaje supervisado (\textit{supervised learning}), que depende de grandes volúmenes de datos etiquetados para alcanzar una alta precisión. La segunda es el aprendizaje autosupervisado (\textit{Self-Supervised Learning, SSL}), una alternativa reciente que permite aprender representaciones útiles a partir de videos sin etiquetas manuales, como lo demuestran trabajos de referencia \citep{Zheng2022GaitLU1M, Wang2025GaitForeMer}. Este paradigma ha demostrado ser especialmente valioso para aprovechar datos no estructurados y reducir la dependencia del etiquetado manual.
 \end{comment}
 
-La re-identificación de personas (\textit{Person Re-ID}) se posiciona entre una tarea en el campo de visión por computadora y las necesidades operativas de vigilancia, análisis forense y sistemas inteligentes. El objetivo no es sólo identificar personas sino mantener una asociación fiable de identidades a través de múltiples cámaras, condiciones de iluminación y lapsos temporales. Estos retos nos presentan problemas prácticos como las oclusiones parciales, cambios de pose y la gran variabilidad de apariencia en las personas. En consecuencia, la re-identificación de personas se convierte en una tarea donde la robustez de las representaciones y la capacidad del modelo para generalizar escenarios son tan importantes como su precisión nominal. Por tal, es común que se busquen mejoras arquitectónicas como entrategias de entrenamiento y normalización de dominios, buscando aumentar la precisión bajo condiciones reales.
+La re-identificación de personas (\textit{Person Re-ID}) se posiciona entre una tarea en el campo de visión por computadora y las necesidades operativas de vigilancia, análisis forense y sistemas inteligentes. El objetivo no es sólo identificar personas sino mantener una asociación fiable de identidades a través de múltiples cámaras, condiciones de iluminación y lapsos temporales. Estos retos nos presentan problemas prácticos como las oclusiones parciales, cambios de pose y la gran variabilidad de apariencia en las personas. En consecuencia, la re-identificación de personas se convierte en una tarea donde la robustez de las representaciones y la capacidad del modelo para generalizar escenarios son tan importantes como su precisión nominal. Por tal, es común que se busquen mejoras arquitectónicas como entrategias de entrenamiento y normalización de dominios, que puedan aumentar la precisión bajo condiciones reales.
 
-Dentro de las modalidades biométricas que trabajan bajo la re-identificación de personas, el reconocimiento de marcha (\textit{Gait Recognition}) aparece como un rasgo complementario con ventajas prácticas claves, ya que la marcha puede extraerse a distancia, funciona cuando la cara no es visible y suele ser relativamente estable ante cambios de la vestimenta, escencial en escenarios de larga distancia o con cámaras con baja resolución \citep{Purish2023GaitRecognition}. Sin embargo, trabajar bajo el reconocimiento de marcha exige capturar información temporal y estructural, como la dinámica corporal, secuencia de siluetas y patrones cíclicos; además de lidiar con variaciones por ángulo de visión, velocidad de desplazamiento, fondos complejos y ruido en la segmentación de siluetas. En consecuencia, el reconocimiento de marcha nos permite diseñar representaciones que conserven la información temporal relevante y escalable en grandes escenarios. 
+Dentro de las modalidades biométricas que trabajan bajo la re-identificación de personas, el reconocimiento de marcha (\textit{Gait Recognition}) aparece como un rasgo complementario con ventajas prácticas claves, ya que la marcha puede extraerse a distancia, funciona cuando la cara no es visible y suele ser relativamente estable ante cambios de la vestimenta, escencial en escenarios de larga distancia o con cámaras con baja resolución \citep{Purish2023GaitRecognition}. Sin embargo, trabajar bajo el reconocimiento de marcha exige capturar información temporal y estructural, como la dinámica corporal, secuencia de siluetas y patrones cíclicos; además de lidiar con variaciones por ángulo de visión, velocidad de desplazamiento, fondos complejos y ruido en la segmentación de siluetas. En consecuencia, esta modalidad biométrica nos permite diseñar representaciones que conserven la información temporal relevante y escalable en grandes escenarios. 
 
-En este contexto, el aprendizaje supervisado es la vía más directa para alcanzar una alta precisión en tareas de re-identificación; las redes profundas entrenadas con pares o tripletas, pérdida de clasificación y conjuntos etiquetadas permiten optimizar directamente la discriminación. No obstante, este paradigma presenta limitaciones prácticas como la necesidad de anotaciones y su recolección, y la tendencia al sobreajuste a condiciones que no representan todas las variables del mundo real. Además, los modelos supervisados suelen perder eficacia cuando se despliegan en nuevos entornos. Esto evidencia estrategias que reduzcan la dependencia del etiquetado exhaustivo y mejore la transferencia entre dominios.
+En este contexto, el aprendizaje supervisado (\textit{Supervised Learning}) es la vía más directa para alcanzar una alta precisión en tareas de re-identificación; las redes profundas entrenadas con pares o tripletas, pérdida de clasificación y conjuntos etiquetadas, permiten optimizar directamente la discriminación. No obstante, este paradigma presenta limitaciones prácticas como la necesidad de anotaciones y su recolección, y la tendencia al sobreajuste a condiciones que no representan todas las variables del mundo real. Además, los  modelos supervisados suelen perder eficacia cuando se despliegan en nuevos entornos. Esto evidencia estrategias que reduzcan la dependencia del etiquetado exhaustivo y mejore la transferencia entre dominios.
 
-Frente a dichas limitaciones, el aprendizaje autosupervisado (\textit{Self Supervised Learning - SSL}) ofrece explorar grandes colecciones sin etiquetas, aprendiendo invaricancias útiles mediante \textit{pretext-tasks}. El reconocimiento de marcha puede utilizar características espacio-temporales que codifican la dinámica de marcha y robustez frente a diferentes vistas. Aquí es donde los temas convergen, un enfoque híbrido que combine el pre-entrenamiento autosupervisado sobre grandes volúmenes y posteriormente realizar un ajuste supervisado sobre conjuntos anotados, mejorando al generalización entre cámaras y recuperación de discriminantes finos necesarios para la re-identificación.
+En contraste, el aprendizaje autosupervisado (\textit{Self Supervised Learning - SSL}) ofrece explorar grandes colecciones sin etiquetas, aprendiendo invaricancias útiles mediante \textit{pretext-tasks}. El reconocimiento de marcha puede utilizar características espacio-temporales que codifican la dinámica de marcha y robustez frente a diferentes vistas. Aquí es donde ambos enfoques de aprendizajes convergen, un enfoque híbrido que combine el pre-entrenamiento autosupervisado sobre grandes volúmenes y posteriormente realizar un ajuste supervisado sobre conjuntos anotados, buscando mejroar la generalización entre cámaras y recuperación de discriminantes finos necesarios para la re-identificación.
 
 \section{Descripción de la situación problemática}
 
-A pesar de sus avances, \textit{Gait Recognition} aún enfrenta un desafíos relacionado con las limitaciones de ambas estrategias de aprendizaje. Los métodos supervisados ofrecen una alta precisión, pero su escalabilidad se ve comprometida por la necesidad de datos etiquetados en contextos reales, donde las variaciones visuales son casi infinitas. En contraste, el aprendizaje autosupervisado permite una mayor generalización y adaptabilidad, pero carece de una guía explícita que ayude al modelo a distinguir detalles sutiles entre individuos con patrones de caminata similares.
+A pesar de sus avances, \textit{Gait Recognition} aún enfrenta desafíos relacionados con las limitaciones de ambas estrategias de aprendizaje. Los métodos supervisados ofrecen una alta precisión, pero su escalabilidad se ve comprometida por la necesidad de datos etiquetados en contextos reales, donde las variaciones visuales son casi infinitas. Y, por otro lado, el aprendizaje autosupervisado permite una mayor generalización y adaptabilidad, pero carece de una guía explícita que ayude al modelo a distinguir detalles sutiles entre individuos con patrones de caminata similares.
 
-Para abordar estas deficiencias, investigaciones recientes han explorado modelos híbridos y arquitecturas más complejas. Por ejemplo, \citet{Kovacevic2021SelfAttentionGait} introduce mecanismos de auto-atención que mejoran la capacidad del modelo para concentrarse en las regiones más relevantes del movimiento. No obstante, incluso estos enfoques avanzados no logran resolver completamente el problema, ya que siguen careciendo de un componente supervisado que refine la discriminación entre identidades.
+Para abordar estas deficiencias, investigaciones recientes han explorado modelos híbridos y arquitecturas más complejas. Por ejemplo, \citet{Kovacevic2021SelfAttentionGait} introduce mecanismos de auto-atención que mejora la capacidad del modelo para concentrarse en las regiones más relevantes del movimiento. No obstante, incluso estos enfoques avanzados no logran resolver completamente el problema, ya que siguen careciendo de un componente supervisado que refine la discriminación entre identidades.
 
 En este contexto, el problema que esta tesis aborda radica en la necesidad de un marco de trabajo que combine de manera efectiva la capacidad de generalización del aprendizaje autosupervisado con la precisión del aprendizaje supervisado. Más que una simple combinación, se busca explorar una integración sinérgica entre ambos paradigmas, aprovechando la robustez de los modelos basados en atención y la guía estructurada del aprendizaje supervisado para mejorar la fiabilidad y adaptabilidad del reconocimiento de marcha en escenarios reales.
 
-
 \section{Formulación del problema}
 
-En \textit{Gait Recognition}, los métodos supervisados ofrecen alta precisión, pero dependen de grandes volúmenes de datos etiquetados, lo que limita su escalabilidad. Por otro lado, el aprendizaje autosupervisado reduce esa dependencia, aunque pierde capacidad para diferenciar identidades similares. Las propuestas híbridas actuales combinan ambos enfoques de forma parcial, sin una integración real. Por ello, esta investigación aborda la falta de un marco unificado que combine de manera efectiva la precisión del aprendizaje supervisado y la generalización del aprendizaje autosupervisado para mejorar la re-identificación de personas.
+En \textit{Gait Recognition}, los métodos supervisados ofrecen alta precisión, pero dependen de grandes volúmenes de datos etiquetados, lo que limita su escalabilidad. Por otro lado, el aprendizaje autosupervisado reduce esa dependencia, aunque pierde capacidad para diferenciar identidades similares. Las propuestas híbridas actuales combinan ambos enfoques de forma parcial, sin una integración real. Por ello, esta investigación aborda la falta de un marco unificado que combine de manera efectiva la precisión del aprendizaje supervisado y la generalizacón del aprendizaje autosupervisado para mejorar la re-identificación de personas.
+
+En \textit{Gait Recognition} no hay un marco que logre integrar de manera efectiva la capacidad de generalización del aprendizaje supervisado con la alta precisión discrimnativa del aprendizaje supervisado. Los métodos disponibles combinan ambos enfoques de forma parcial o secuencial, lo que limita su rendimiento en escenarios reales con variaciones significativas entre individuos. Por ello, el problema de la presente investigación consiste en diseñar y evalua un modelo híbrido que unifique ambos paradigmas para mejorar la diabilidad y la adaptabilidad del proceso de re-identificación.
 
 \section{Objetivos de investigación}
 
@@ -45,16 +46,15 @@ Desarrollar y evaluar un modelo híbrido que combine el aprendizaje supervisado 
 
 \section{Justificación}
 
-Este trabajo busca superar las limitaciones de los enfoques híbridos actuales en el reconocimiento de marcha. Aunque existen propuestas que combinan el aprendizaje supervisado y autosupervisado \citep{Li2020SemiSupGait}, la mayoría lo hace de manera secuencial, sin lograr una integración efectiva entre ambos paradigmas. En este contexto, la investigación propone un marco unificado que permita la interacción sinérgica entre las dos estrategias de aprendizaje, contribuyendo así al desarrollo de modelos más equilibrados entre precisión y capacidad de generalización.
+Este trabajo busca superar las limitaciones de los enfoques híbridos actuales en el reconocimiento de marcha. Aunque existen propuestas que combinan el aprendizaje supervisado y autosupervisado \citep{Li2020SemiSupGait}, la mayoría lo hace de manera secuencial, sin lograr una integración efectiva entre ambos paradigmas. Frente a ellos, la investigación propone un marco unificado que permita la interacción sinérgica entre las dos estrategias de aprendizaje, contribuyendo así al desarrollo de modelos más equilibrados entre precisión y capacidad de generalización.
 
 En el plano práctico, esta propuesta tiene un impacto tangible al reducir la dependencia de grandes volúmenes de datos etiquetados, lo que disminuye los costos y la complejidad asociados a la implementación de sistemas de re-identificación a gran escala. Un modelo más generalizable, como los explorados en trabajos recientes \citep{Dou2023IdentitySeeking}, facilitaría la transición de los sistemas actuales desde entornos controlados de laboratorio hacia aplicaciones reales, aumentando su robustez y confiabilidad.
 
 Finalmente, la justificación social radica en el potencial de este tipo de tecnologías para fortalecer la seguridad ciudadana, el monitoreo inteligente de espacios públicos y el análisis forense. Al mejorar la precisión y escalabilidad de los sistemas de reconocimiento de marcha, esta investigación contribuye al desarrollo de soluciones tecnológicas más efectivas y socialmente relevantes, capaces de apoyar la gestión de entornos urbanos de manera ética y responsable.
 
-
-
 \section{Alcance y limitaciones / restricciones} %[opcional]
 
-El alcance de esta investigación se centra en el desarrollo y evaluación experimental de un modelo híbrido para la re-identificación de personas mediante \textit{Gait Recognition}. Se considera únicamente datos visuales y se limita al uso de conjuntos de datos públicos disponibles. No se aborda la integración en sistemas de vigilancia en tiempo real ni la optimización para hardware específico. Además, como limitación técnica, el entrenamiento del modelo dependerá de los recursos computacionales disponibles, lo que puede restringir la escala del pre-entrenamiento.
+El alcance de esta investigación abarca el diseño, implementación y evaluación experimental de un diseño híbrido para la re-identificación de personas mediante \textit{Gait Recognition}. El estudio se limita al uso de datos visuales provenientes de conjuntos de datos públicos y se centra en la comparación del modelo propuesto frente a enfoques supervisados y autosupervisados, utilizando métricas estándar. \\
+La investigación no contempla el desarrollo de un sistema de vigilancia en tiempo real ni la optimización para hardware específico.Asimismo, el entrenamiento de los modelos estarám condicionados por los recursos computacionales disponibles, lo que puede restringir la magnitud del estudio. 
 
 \textit{Nota: El documento corresponde a una entrega parcial del trabajo de tesis, por lo que el alcance y las limitaciones  pueden estar sujetos a cambios en función del avance y los resultados experimentales obtenidos.}
